Made nav responsive
Added media queries to the CSS to change the padding depending on the size of the window

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
     <div id="nav" class="row">
-        <div class="col-lg-3 align-self-center">
+        <div class="col-sm-3 col-md-3 col-lg-3 align-self-center">
             <nav class="nav justify-content-center">
                 <a id="nav-left" class="nav-link" href="#">Driblers.</a>
             </nav>
         </div>
-        <div class="col-lg-9 align-self-center">
+        <div class="col-sm-9 col-md-9 col-lg-9 align-self-center">
             <nav id="nav-right" class="nav justify-content-center">
                 <a class="nav-link" href="#">Highlights</a>
                 <a class="nav-link" href="#">Players</a>
