--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <!-- || Navbar -->
+
     <div id="nav" class="row">
         <div class="col-sm-3 col-md-3 col-lg-3 align-self-center">
             <nav class="nav justify-content-center">
@@ -29,10 +31,63 @@
         </div>
     </div>
 
+    <!-- || Carousel -->
+
+   <!-- TODO: Figure out Parallax in the Carousel -->
+
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="row justify-content-center">
+                    <div class="col-log-6">
+                        <h1>23</h1>
+                        <h2>LeBron. James</h2>
+                    </div>
+                    <div class="col-log-6">
+                        <span class="dot"></span>
+                        <img id="lebron" src="images/lebron.jpg" alt="Second Slide">
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="carousel-item">
+                    <img src="images/lebron.jpg" alt="Second Slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/lebron.jpg" alt="Third Slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
+                </div> -->
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 </body>
 
 </html>
