Added actually Lebron photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-log-6">
                         <span class="dot"></span>
-                        <img id="lebron" src="images/lebron.jpg" alt="Second Slide">
+                        <img id="lebron" src="images/lebron.png" alt="Second Slide">
                     </div>
                 </div>
             </div>
