--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- || Carousel -->
 
-   <!-- TODO: Figure out Parallax in the Carousel -->
+    <!-- TODO: Figure out Parallax in the Carousel -->
 
     <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
         <!-- Carousel indicators -->
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-log-6">
                         <span class="dot"></span>
-                        <img id="lebron" src="images/lebron.jpg" alt="Second Slide">
+                        <img id="lebron" src="images/lebron.png" alt="Second Slide">
                     </div>
                 </div>
             </div>
