Updated some carousel stuff

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- TODO: Figure out Parallax in the Carousel -->
 
-    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-interval="7000" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -52,7 +52,31 @@
                     </div>
                     <div class="col-log-6">
                         <span class="dot"></span>
-                        <img id="lebron" src="images/lebron.png" alt="Second Slide">
+                        <img id="lebron" src="/images/lebron.png" alt="Second Slide">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row justify-content-center">
+                    <div class="col-log-6">
+                        <h1>23</h1>
+                        <h2>LeBron. James</h2>
+                    </div>
+                    <div class="col-log-6">
+                        <span class="dot"></span>
+                        <img id="lebron" src="/images/lebron.png" alt="Second Slide">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row justify-content-center">
+                    <div class="col-log-6">
+                        <h1>23</h1>
+                        <h2>LeBron. James</h2>
+                    </div>
+                    <div class="col-log-6">
+                        <span class="dot"></span>
+                        <img id="lebron" src="/images/lebron.png" alt="Second Slide">
                     </div>
                 </div>
             </div>
