started work on the mobile nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <title>Title</title>
 </head>
 
@@ -29,6 +30,21 @@
                 <a class="nav-link" href="#">About</a>
             </nav>
         </div>
+    </div>
+
+    <div id="mobile-nav" class="row">
+        <div class="col-sm-3 align-self-center">
+            <nav class="nav justify-content-center">
+                <i id="menu-icon" class="fas fa-bars"></i>
+            </nav>
+        <div class="col-sm-9 align-self-center">
+            <nav class="nav justify-content-center">
+                <a id="nav-left" class="nav-link" href="#">Driblers.</a>
+            </nav>
+        </div>    
+            
+        </div>
+
     </div>
 
     <!-- || Carousel -->
