Not sure what is changed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="mobile-nav" class="row">
         <div class="col-sm-3 align-self-center">
             <nav class="nav justify-content-center">
-                <i id="menu-icon" class="fas fa-bars"></i>
+                <!-- <i id="menu-icon" class="fas fa-bars"></i> -->
             </nav>
         <div class="col-sm-9 align-self-center">
             <nav class="nav justify-content-center">
