--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
     <title>Title</title>
 </head>
 
@@ -17,7 +16,7 @@
     <!-- || Navbar -->
 
     <div id="nav" class="row">
-        <div class="col-sm-3 col-md-3 col-lg-3 align-self-center">
+        <div class="col-sm-3 col-md-3 col-lg-3">
             <nav class="nav justify-content-center">
                 <a id="nav-left" class="nav-link" href="#">Driblers.</a>
             </nav>
@@ -35,7 +34,7 @@
     <div id="mobile-nav" class="row">
         <div class="col-sm-3 align-self-center">
             <nav class="nav justify-content-center">
-                <!-- <i id="menu-icon" class="fas fa-bars"></i> -->
+                <i id="menu-icon" class="fas fa-bars"></i>
             </nav>
         <div class="col-sm-9 align-self-center">
             <nav class="nav justify-content-center">
@@ -61,41 +60,46 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <div id="carousel-item-container" class="row justify-content-center">
+                    <div id="details-container" class="col-lg-6">
+                        <div id="first-details">
+                            <h1>23</h1>
+                            <h2>LeBron.</h2>
+                            <h2>James</h2>
+                        </div>
+                    </div>
+                    <div id="dot-package" class="col-lg-6">
+                        <img id="lebron" src="/images/lebron.png" alt="Second Slide">
+                        <span class="dot"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="carousel-item">
                 <div class="row justify-content-center">
                     <div class="col-log-6">
                         <h1>23</h1>
                         <h2>LeBron. James</h2>
                     </div>
-                    <div class="col-log-6">
-                        <span class="dot"></span>
+                    <div id="dot-package" class="col-log-6">
                         <img id="lebron" src="/images/lebron.png" alt="Second Slide">
+                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
+
             <div class="carousel-item">
                 <div class="row justify-content-center">
                     <div class="col-log-6">
                         <h1>23</h1>
                         <h2>LeBron. James</h2>
                     </div>
-                    <div class="col-log-6">
-                        <span class="dot"></span>
+                    <div id="dot-package" class="col-log-6">
                         <img id="lebron" src="/images/lebron.png" alt="Second Slide">
+                        <span class="dot"></span>
                     </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row justify-content-center">
-                    <div class="col-log-6">
-                        <h1>23</h1>
-                        <h2>LeBron. James</h2>
-                    </div>
-                    <div class="col-log-6">
-                        <span class="dot"></span>
-                        <img id="lebron" src="/images/lebron.png" alt="Second Slide">
-                    </div>
-                </div>
-            </div>
+            </div> -->
             <!-- <div class="carousel-item">
                     <img src="images/lebron.jpg" alt="Second Slide">
                     <div class="carousel-caption d-none d-md-block">
